project box logos added

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -351,16 +351,16 @@
       <clipPath id="clipPath_wolf_box">
           <polygon points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       </clipPath>
-      <image width="100" height="100" x="100" y="550" data-x-rel="-175" xlink:href="img/karunalogo.png" class="image" id="wpimg"/>
+      <image width="100" height="100" x="100" y="555" data-x-rel="-175" xlink:href="img/karunalogo.png" class="image" id="wpimg"/>
       <polygon id="_18" data-name="18" class="cls-2 project_box has_link" points="1391.3 490.5 1264.86 490.5 1201.64 600 1264.86 709.5 1391.3 709.5 1454.52 600 1391.3 490.5"/>
       <text x="925" y="515" data-x-rel="-175" id="tw1" class="casestudy csux"><a href="projects/karunavr">UX CASE STUDY:</a></text>
-      <text x="920" y="685" data-x-rel="-180" id="tw4" class="projectname"><a href="projects/karunavr">karuna vr</a></text>
+      <text x="920" y="685" data-x-rel="-170" id="tw4" class="projectname"><a href="projects/karunavr">karuna vr</a></text>
   </g>
   <g id="resonate_ai_box" data-attach="#_7" class="attached" style="clip-path: url(#clipPath_resonate_box);" data-clip-path="#clipPath_resonate_box">
       <clipPath id="clipPath_resonate_box">
           <polygon points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       </clipPath>
-      <image width="560" height="220" x="685" y="55" data-x-rel="-400" xlink:href="img/resonateai.png" class="image" id="resonate_intro"/>
+      <image width="560" height="90" x="685" y="125" data-x-rel="-400" xlink:href="img/resonate_logo.png" class="image" id="resonate_intro"/>
       <polygon id="_7" data-name="7" class="cls-2 project_box has_link" points="1379.04 64.5 1258.11 64.5 1197.65 169.22 1258.11 273.95 1379.04 273.95 1439.5 169.22 1379.04 64.5"/>
       <text x="920" y="85" data-x-rel="-165" id="trai6" class="casestudy csux"><a href="projects/resonateai">UX CASE STUDY:</a></text>
       <text x="912" y="255" data-x-rel="-173" id="trai8" class="projectname"><a href="projects/resonateai">resonate.ai</a></text>
@@ -369,7 +369,7 @@
       <clipPath id="clipPath_sfac_box">
           <polygon points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       </clipPath>
-      <image width="330" height="110" x="1135" y="270" data-x-rel="-280" xlink:href="img/aartics_icon_v4.png" class="image" id="sfac_intro"/>
+      <image width="330" height="90" x="1135" y="330" data-x-rel="-280" xlink:href="img/aartics_icon_v4.png" class="image" id="sfac_intro"/>
       <polygon id="_16" data-name="16" class="cls-2 project_box has_link" points="1707.45 280.5 1592.55 280.5 1535.11 380 1592.55 479.5 1707.45 479.5 1764.89 380 1707.45 280.5"/>
       <text x="1255" y="300" data-x-rel="-155" id="trsf6" class="casestudy csux"><a href="projects/aartics_story">UX CASE STUDY:</a></text>
       <text x="1280" y="460" data-x-rel="-160" id="trsf8" class="projectname"><a href="projects/aartics_story">aartics.com</a></text>                
