aartics concept image and video content added

--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -13,7 +13,6 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets_v4/css/aartics_projects_v4.css"/>
-    <link rel="stylesheet" href="css/resonate_v4.css"/>
     <link rel="icon" 
       type="image/png" 
       href="../../favico.png">
@@ -67,22 +66,20 @@
         <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
     </ul>
     </header>
-    <div class="aarticslogo">
-        <img id="logo" width="40px" src="../../aartics_icon.png"/>
-    </div>
+
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4" id="intro-text">
-<!-- 		<img src="local_img/resonate_logo.png" id="intro-logo"/> -->
+		<img src="local_img/aartics_icon_v4.png" id="intro-logo"/>
 		<h1>aartics.com</h1>
 		<p>As a UX Designer and Front-end developer and AR enthusiast, I created a 3 dimensional website for a project gallery, viewed in a standard web browser</p>
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
-					<img src="local_img/sandtimer_solid.png"/>
+					<img src="../assets_v4/img/sandtimer_solid.png"/>
 					<h6>Team size: 1</h6>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
-					<img src="local_img/sandtime.png"/>
+					<img src="../assets_v4/img/sandtime.png"/>
 					<h6>Duration: 6 months</h6>
 				</div>					
 			</div>
@@ -91,7 +88,6 @@
 			</div>
 		</div>
 		<div class="col-sm-8" id="heroimage">
-<!-- 			<img src="local_img/hero_resonate_3.png" id="heroimageimg"/> -->
 			<img src="local_img/aartics_story.gif" id="heroimageimg"/>
 		</div>
 	  </div>
@@ -142,7 +138,7 @@
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Screenshots of previous menu:</p>
-				<img class="itemblock-image-img" src="local_img/screenshot_existing.png"/>
+				<img class="itemblock-image-img" src="local_img/a01.png"/>
 			</div>
 		</div>
 	  </div>
@@ -160,7 +156,7 @@
 				<div class="row itemblock-image-title-div">
 					<p class="itemblock-image-title">Video of Karuna VR menu that I designed and developed in Unity:</p>
 					  <video class="itemblock-image-img" autoplay controls loop>
-						<source src="local_img/karuna_menu_aartics.mov">
+						<source src="local_img/aartics.mov">
 					  </video>
 				</div>
 		</div>
@@ -182,7 +178,7 @@
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
-				<img class="itemblock-image-img" src="local_img/choose_scene.png"/>
+				<img class="itemblock-image-img" src="local_img/a01.png"/>
 			</div>
 		</div>
 	  </div>
@@ -196,20 +192,181 @@
 			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
 			<ul class="itemblock-list-ul">
 				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-				<li class="itemblock-list-li">BRIAN: Patrick's boss</li>
-				<li class="itemblock-list-li">DANIEL: Founder</li>
-				<li class="itemblock-list-li">LIZ: Venture Capitalist</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
 				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
-				<img class="itemblock-image-img" src="local_img/sketch_assets.png"/>
+				<img class="itemblock-image-img" src="local_img/a02.png"/>
 			</div>
 		</div>
 	  </div>
 	</div>	
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
+			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">Indicate Pain on individual points</li>
+				<li class="itemblock-list-li">Select scene based on pain</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<img class="itemblock-image-img" src="local_img/a03.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
+			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<img class="itemblock-image-img" src="local_img/a04.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
+			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">Indicate Pain on individual points</li>
+				<li class="itemblock-list-li">Select scene based on pain</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<img class="itemblock-image-img" src="local_img/a05.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
+			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<img class="itemblock-image-img" src="local_img/a06.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
+			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">Indicate Pain on individual points</li>
+				<li class="itemblock-list-li">Select scene based on pain</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<img class="itemblock-image-img" src="local_img/a07.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
+			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<img class="itemblock-image-img" src="local_img/a08.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock" id="process-1">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
+			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">Indicate Pain on individual points</li>
+				<li class="itemblock-list-li">Select scene based on pain</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<img class="itemblock-image-img" src="local_img/a09.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
+	<div class="container-fluid itemblock">
+	  <div class="row">
+		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
+			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
+			<p class="itemblock-sectiontitle-process">process</p>
+			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
+			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<ul class="itemblock-list-ul">
+				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+			</ul>
+			<p class="itemblock-material">&nbsp;</p>
+		</div>
+		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
+			<div class="row itemblock-image-title-div">
+				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<img class="itemblock-image-img" src="local_img/a10.png"/>
+			</div>
+		</div>
+	  </div>
+	</div>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-6 col-sm-6 col-md-2 footer-tile unoux">
