aartics concept text content added

--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -80,7 +80,7 @@
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
 					<img src="../assets_v4/img/sandtime.png"/>
-					<h6>Duration: 6 months</h6>
+					<h6>Duration: 2 months</h6>
 				</div>					
 			</div>
 			<div class="row">
@@ -98,16 +98,14 @@
 				<a href="#problem-1">		
 					<p class="boxtitle" id="problemtitle">problem</p>
 					<img id="problemsrc" src="../assets_v4/img/icon_problem.png"/>
-					<p class="introdesc" id="problemdesc">Our client Resonate.ai approached us with a machine learning algorithm 
-					that can suggest the "tone" of any content. Our challenge was to design a delightful experience for financial marketers to use the product.</p>
+					<p class="introdesc" id="problemdesc">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="solution">
 				<a href="#solution-1">
 					<p class="boxtitle" id="solutiontitle">solution</p>
 					<img id="solutionsrc" src="../assets_v4/img/icon_solution.png"/>
-					<p class="introdesc" id="solutiondesc">We designed and delivered prototypes for an application which can make tone suggestions in a web-based document editor
-					and a plug-in for email applications. The feel, voice and tone for the product attempts to mimic Scarlett Johanssen's movie personalities.</p>
+					<p class="introdesc" id="solutiondesc">Imagining new media futures.</p>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 intro-tile" id="process">
@@ -125,20 +123,19 @@
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_problem_color.png"/>
 			<p class="itemblock-sectiontitle-problem">problem synthesis</p>
-			<h1 class="itemblock-itemtitle">requirements gathering</h1>
-			<p class="itemblock-paragraph">The existing menu categories were confusing</p>
+			<h1 class="itemblock-itemtitle">imagining new media futures</h1>
+			<p class="itemblock-paragraph">For my design portfolio, aartics.com I undertook making a 3D representation my project gallery, viewed as if in a VR/AR world.</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">WHAT: Design and develop a menu scene in Unity for navigating scenes for Karuna VR application</li>
-				<li class="itemblock-list-li">WHO: Physical Therapists + Pain inflicted patients</li>
-				<li class="itemblock-list-li">WHY: Patient registration, data collection, calibration of HTC Vive in application, selection 
-				pain exercises</li>
+				<li class="itemblock-list-li">WHAT: A 3D portfolio website</li>
+ 
+
 			</ul>
 			<p class="itemblock-material"></p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Screenshots of previous menu:</p>
-				<img class="itemblock-image-img" src="local_img/a01.png"/>
+				<p class="itemblock-image-title">Project description:</p>
+				<img class="itemblock-image-img" src="local_img/001.png"/>
 			</div>
 		</div>
 	  </div>
@@ -147,14 +144,14 @@
 	  <div class="row">
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_solution_color.png"/>
-			<p class="itemblock-sectiontitle-solution">solution discovery</p>
-			<h1 class="itemblock-itemtitle">final menu in unity</h1>
-			<p class="itemblock-paragraph">I developed the menu in Unity with Unity UI assets and simple C# code</p>
+			<p class="itemblock-sectiontitle-solution">solution</p>
+			<h1 class="itemblock-itemtitle">a 3D website!</h1>
+			<p class="itemblock-paragraph">Check out my website</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 				<div class="row itemblock-image-title-div">
-					<p class="itemblock-image-title">Video of Karuna VR menu that I designed and developed in Unity:</p>
+					<p class="itemblock-image-title">Video of interaction on my 3D website:</p>
 					  <video class="itemblock-image-img" autoplay controls loop>
 						<source src="local_img/aartics.mov">
 					  </video>
@@ -167,17 +164,13 @@
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
-			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">Indicate Pain on individual points</li>
-				<li class="itemblock-list-li">Select scene based on pain</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">visualizing a three dimensional gallery</h1>
+			<p class="itemblock-paragraph">I started imagining a grid of hexagons where each hexagon could contain a project, an image or other data. By using a hexagonal grid, I can allow the viewer to extend explorations in 6 directions, instead of the traditional 4.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<p class="itemblock-image-title">Screenshot of model of 3D visual gallery:</p>
 				<img class="itemblock-image-img" src="local_img/a01.png"/>
 			</div>
 		</div>
@@ -188,37 +181,30 @@
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">visualizing a spherical gallery</h1>
+			<p class="itemblock-paragraph">Conceptually, using a hexagonal grid could also allow ‘folding’ the design pattern into spherical geodesic dome "worlds of information" that viewers could choose to explore. That could be fun.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Folding 2D pattern into 3D sphere:</p>
 				<img class="itemblock-image-img" src="local_img/a02.png"/>
 			</div>
 		</div>
 	  </div>
 	</div>	
-	<div class="container-fluid itemblock" id="process-1">
+	<div class="container-fluid itemblock">
 	  <div class="row">
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
-			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">Indicate Pain on individual points</li>
-				<li class="itemblock-list-li">Select scene based on pain</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">visualizing a panaromic gallery</h1>
+			<p class="itemblock-paragraph">This enabled me to imagine viewers experiencing equally sized hexagonal tiles in a panoramic dome, and not restricted to traditional rectangular view-boxes (like this web browser we are reading this article on). Viewing from inside the dome (panorama) seemed to limit a user’s view, so I chose to explore viewing from the outside (inverse panorama).</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<p class="itemblock-image-title">Panaromic view vs. inverse panaromic view:</p>
 				<img class="itemblock-image-img" src="local_img/a03.png"/>
 			</div>
 		</div>
@@ -229,37 +215,30 @@
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">visualizing data in 3D</h1>
+			<p class="itemblock-paragraph">I could then use extruded projections for information of various types and hierarchies - qualitative or quantitative data. These can be represented as heights of the polygons.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Concept for project data types on viewing gallery:</p>
 				<img class="itemblock-image-img" src="local_img/a04.png"/>
 			</div>
 		</div>
 	  </div>
 	</div>
-	<div class="container-fluid itemblock" id="process-1">
+	<div class="container-fluid itemblock">
 	  <div class="row">
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
-			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">Indicate Pain on individual points</li>
-				<li class="itemblock-list-li">Select scene based on pain</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">visualizing bird's eye perspective</h1>
+			<p class="itemblock-paragraph">I proceeded to visualize the panoramic bird’s eye view interface for my website, by working on achieving the right perspective for viewing on a desktop browser.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<p class="itemblock-image-title">Perspective viewing of data model:</p>
 				<img class="itemblock-image-img" src="local_img/a05.png"/>
 			</div>
 		</div>
@@ -270,37 +249,36 @@
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<h1 class="itemblock-itemtitle">interaction experience in a desktop browser</h1>
+			<p class="itemblock-paragraph">I developed a recipe framework for realizing this concept into a website for my portfolio. I made the 3D object representation in SketchUP. For the current design, this is a hexagonal column grid:</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+				<li class="itemblock-list-li">MAKING 3D MODEL: SketchUP</li>
+				<li class="itemblock-list-li">STITCHING CAMERA VIEWS: Adobe Photoshop</li>
+				<li class="itemblock-list-li">MAKING SCALABLE VECTORS: Adobe Illustrator</li>
+				<li class="itemblock-list-li">DEVELOP AS WEBSITE: HTML, CSS, JavaScript</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Visual perception of hexagonal column grid in perspective:</p>
 				<img class="itemblock-image-img" src="local_img/a06.png"/>
 			</div>
 		</div>
 	  </div>
 	</div>
-	<div class="container-fluid itemblock" id="process-1">
+	<div class="container-fluid itemblock">
 	  <div class="row">
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
-			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">Indicate Pain on individual points</li>
-				<li class="itemblock-list-li">Select scene based on pain</li>
-			</ul>
-			<p class="itemblock-material">&nbsp;</p>
+			<h1 class="itemblock-itemtitle">drawing the objects in perspective location and shadows</h1>
+			<p class="itemblock-paragraph">I exported screenshots of the “bird’s eye view” camera perspective of the model. I stitched the screenshots in PhotoShop for a continuous panoramic effect. I used 20 states of full length images to understand the effect. These images served as the wireframes for the site interaction. I used the 20 state images in HTML, SVG and JavaScript to change the image based on the position of the cursor on the page.</p>
+			<p class="itemblock-material"><a href="../aartics_concept/">CLICK HERE TO SEE THE WORK-IN-PROGRESS WIREFRAME PROTOTYPE</a></p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<p class="itemblock-image-title">Screenshots of work-in-progress:</p>
 				<img class="itemblock-image-img" src="local_img/a07.png"/>
 			</div>
 		</div>
@@ -311,37 +289,35 @@
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
-			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
-			</ul>
+			<h1 class="itemblock-itemtitle">converting the shapes and shadows to vector graphics</h1>
+			<p class="itemblock-paragraph"> laid out 9 states of the 3D panorama in Adobe Illustrator on individual artboards and illustrated the shapes and shadows as polygons for every state. Care was taken to ensure that each artboard contains the same layer name for individual polygons. I then exported all the artboards as individual SVGs from Illustrator.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Screenshot of artboards from Illustrator:</p>
 				<img class="itemblock-image-img" src="local_img/a08.png"/>
 			</div>
 		</div>
 	  </div>
 	</div>
-	<div class="container-fluid itemblock" id="process-1">
+	<div class="container-fluid itemblock">
 	  <div class="row">
 		<div class="col-xs-12 col-md-4 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">mocking up body selection functionality</h1>
-			<p class="itemblock-paragraph">I made mockups on Sketch and Illustrator to discuss designing of features:</p>
+			<h1 class="itemblock-itemtitle">scripting magic</h1>
+			<p class="itemblock-paragraph">Morphing svg polygons in browser based on user interaction:</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">Indicate Pain on individual points</li>
-				<li class="itemblock-list-li">Select scene based on pain</li>
+				<li class="itemblock-list-li">Studying the structure of the SVG shows that each polygon is stored with a “points” attribute which is an array of numbers and each state of the panorama is a different set of numbers.</li>
+				<li class="itemblock-list-li">With the help of my friend, philosopher and programmer extraordinaire guide <a href="https://github.com/owings1" target="_blank">@owings1</a>, we wrote a script that will store the points value for each polygon as arrays objects in JSON.</li>
+				<li class="itemblock-list-li">We then used vanilla JavaScript to interpolate and update the values of the points attribute for each polygon in an initialized SVG based on the position of the cursor on the page.</li>
 			</ul>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Mockup of scene selection menu:</p>
+				<p class="itemblock-image-title">Interpolating array of points for each SVG:</p>
 				<img class="itemblock-image-img" src="local_img/a09.png"/>
 			</div>
 		</div>
@@ -352,16 +328,16 @@
 		<div class="col-xs-12 col-md-4 col-md-push-8 itemblock-textholder">
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
-			<h1 class="itemblock-itemtitle">graphic assets in sketch</h1>
-			<p class="itemblock-paragraph">We identified personas in Financial Startup Markets, and used these personas in prototypes to deliberate on features:</p>
+			<h1 class="itemblock-itemtitle">research by design, and design by research</h1>
+			<p class="itemblock-paragraph">Thanks to this design exercise, we now have an animation framework to morph Illustrator graphics to interactive HTML. This allows us to imagine and prototype 3D visual interactions in 2D tools and traditional browsers. There are many improvements to be made, and as time goes on, I hope to present more examples and improved versions of this framework.</p>
 			<ul class="itemblock-list-ul">
-				<li class="itemblock-list-li">PATRICK: Junior Marketer</li>
+				<li class="itemblock-list-li">The files and code used for developing are available on <a href="https://github.com/aartics/aartics_portfolio" target="_blank">GitHub</a></li>
 			</ul>
-			<p class="itemblock-material">&nbsp;</p>
+			<p class="itemblock-material"><a href="https://www.aartics.com">EXPERIENCE THE INTERACTIVE PROTOTYPE</a>.</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
 			<div class="row itemblock-image-title-div">
-				<p class="itemblock-image-title">Personas representing Financial Startups:</p>
+				<p class="itemblock-image-title">Concept for gallery browser in VR/MR/AR, viewed in traditional web browsers:</p>
 				<img class="itemblock-image-img" src="local_img/a10.png"/>
 			</div>
 		</div>
