aartics concept text content added

--- a/aartics/projects/aartics_story/index.htm
+++ b/aartics/projects/aartics_story/index.htm
@@ -290,7 +290,7 @@
 			<img class="itemblock-sectionlogo" src="../assets_v4/img/icon_process_color.png"/>
 			<p class="itemblock-sectiontitle-process">process</p>
 			<h1 class="itemblock-itemtitle">converting the shapes and shadows to vector graphics</h1>
-			<p class="itemblock-paragraph"> laid out 9 states of the 3D panorama in Adobe Illustrator on individual artboards and illustrated the shapes and shadows as polygons for every state. Care was taken to ensure that each artboard contains the same layer name for individual polygons. I then exported all the artboards as individual SVGs from Illustrator.</p>
+			<p class="itemblock-paragraph">I laid out 9 states of the 3D panorama in Adobe Illustrator on individual artboards and illustrated the shapes and shadows as polygons for every state. Care was taken to ensure that each artboard contains the same layer name for individual polygons. I then exported all the artboards as individual SVGs from Illustrator.</p>
 			<p class="itemblock-material">&nbsp;</p>
 		</div>
 		<div class="col-xs-12 col-md-8 col-md-pull-4 itemblock-image-div">
@@ -388,7 +388,7 @@
 				<h3 id="abouth3">about me:</h3>
 				<p>I'm Aarti. I'm a designer + developer and I'm bringing together my past experience in architecture and software engineering to build new futures. Get in touch:</p>
 				<div class="row logocwrapper">
-					<a href="https://www.aartics.com" class="logoc"><img src="../aartics_icon.png"></a>
+					<a href="https://www.aartics.com" class="logoc"><img src="../../aartics_icon_v4_white.png"></a>
 					<a href="aartics_resume.pdf" class="logoc"><img src="../../img/resume_white.png"/></a>
 					<a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="../../img/linkedin_white.png"/></a>
 					<a href="mailto:aartics@gmail.com" class="logoc"><img src="../../img/mail_white.png"/></a>
